--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
+colorama==0.4.3
 Django==3.0.6
+django-cors-headers==3.3.0
 django-environ==0.4.5
 django-filter==2.2.0
 djangorestframework==3.11.0
+idna==2.9
 importlib-metadata==1.6.0
 Markdown==3.2.2
+Pygments==2.6.1
 pytz==2020.1
+requests==2.23.0
 sqlparse==0.3.1
+urllib3==1.25.9
 zipp==3.1.0
